refactor: update readme